// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creditCardSection should render correctly 1`] = `
<Fragment>
  <Panel.Section>
    <Connect(PaymentForm)
      disabled={false}
      formName="joinPlanForm"
    />
  </Panel.Section>
  <Panel.Section>
    <Connect(BillingAddressForm)
      countries={Array []}
      disabled={false}
      formName="joinPlanForm"
    />
  </Panel.Section>
</Fragment>
`;

exports[`creditCardSection should render correctly when form is being submitted 1`] = `
<Fragment>
  <Panel.Section>
    <Connect(PaymentForm)
      disabled={true}
      formName="joinPlanForm"
    />
  </Panel.Section>
  <Panel.Section>
    <Connect(BillingAddressForm)
      countries={Array []}
      disabled={true}
      formName="joinPlanForm"
    />
  </Panel.Section>
</Fragment>
`;

exports[`creditCardSection should render correctly when selectedPlan is Free 1`] = `
<Panel.Section>
  <p>
    Full featured test account that includes:
  </p>
  <ul>
    <li>
      Limited sending volume for testing.
    </li>
    <li>
      Access to all of our powerful API features.
    </li>
    <li>
      30 days of free technical support to get you up and running.
    </li>
  </ul>
</Panel.Section>
`;
